--- a/layers/buildings.yaml
+++ b/layers/buildings.yaml
@@ -68,7 +68,8 @@ layers:
                     visible: true
                     style: buildings-lns
                     # color: [0.592,0.827,0.851]
-                    color: [[16,[0.428,0.687,0.717]],[18,[0.786,0.952,0.970]]]
+                    # color: [[16,[0.428,0.687,0.717]],[18,[0.786,0.952,0.970]]]
+                    color: [[16,[0.428,0.687,0.717]],[18,[0.649,0.785,0.801]]]
                     # width: [[16,0.5px],[17,1px]]
                     width: [[12, .1px], [14, 0.1px], [16, 0.75px], [17, 0.85px], [18, 1.0px]]
                     extrude: function() { return feature.height || 20; }
