--- a/layers/landuse.yaml
+++ b/layers/landuse.yaml
@@ -267,7 +267,8 @@ layers:
                 polygons:
                     visible: true
                     order: global.order
-                    color: [1.000,0.564,0.312]
+                    # color: [1.000,0.564,0.312]
+                    color: [[9,[0.215,1.000,1.000]],[16,[0.078,0.129,0.259]]]
 
 styles:
     landuse:
