railway color change

--- a/layers/transit.yaml
+++ b/layers/transit.yaml
@@ -12,9 +12,11 @@ layers:
                     style: railway-dashed
                     # color: [0.820,0.770,1.000]
                     # color: [0.199,0.189,0.332]
-                    color: [1.000,0.365,0.141]
+                    # color: [1.000,0.365,0.141]
+                    # color: [0.541,0.322,0.920]
+                    color: [0.267,0.000,0.427]
                     # width: [[14,0.15px],[17,1px],[18,2px],[20,12px]]
-                    width: [[14,0.5px],[16,1px],[18,1px],[19,2px]]
+                    width: [[14,0.5px],[16,0.5px],[18,0.75px],[19,2px]]
             # railway-z18:
             #     filter:
             #         $zoom: { min: 18 }
